added more htmls and finished recipes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 	<title>The Odin Project - Bo Baker</title>
 </head>
 <body>
-	<h1>The Odin Project</h1>
-		<p>Test for Odin Project.</p>
-</body>
+	<h1 style="background-color:dodgerblue;">The Odin Project - HTML Foundations - Recipe Project</h1>
+		<p style="background-color: tomato;">This is the final project of the HTML Foundations section of The Odin Project.  This will demonstrate the HTML basics learned to set up the path to front-end web development.  Requred is the landing page for the recipes, as well as four linked pages containing recipes with pictures, ingredients list, and instructions.</p>
+		<ul>
+			<li><a href="recipes/lasagna.html">Lasagna</a> </li>
+			<li><a href="recipes/steak.html">Steak</a></li>
+			<li><a href="recipes/scallops.html">Scallops</a></li>
+		</ul>
+	</body>
 </html>
