--- a/recipes/scallops.html
+++ b/recipes/scallops.html
@@ -35,6 +35,9 @@
 	<p><strong>Per Serving:</strong>
 		408 calories; protein 38.5g; carbohydrates 8.9g; fat 24.4g; cholesterol 152.4mg; sodium 987.9mg. Full Nutrition</p>
 
+ <a href="scallops.html"><h4>Back To Top</h4></a>
+ <a href="../index.html"><h4>Back To Main Menu</h4></a>
+
 
 </body>
 </html>
