--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -48,6 +48,8 @@
 </ul>
 <hr>
 
+ <a href="steak.html"><h4>Back To Top</h4></a>
+ <a href="../index.html"><h4>Back To Main Menu</h4></a>
 
 </body>
 </html>
